iceberg/iceberg-handler/src/test/queries/negative/variant_type_partition_column.q
CREATE EXTERNAL TABLE variant_test_partition (
  id INT,
  data VARIANT
) PARTITIONED BY spec (data)
STORED BY ICEBERG tblproperties('format-version'='3');